--- a/main.tex
+++ b/main.tex
@@ -119,7 +119,7 @@
     \textsc{\large Computational Techniques for Aerospace Design}\\[0.2 cm]
 	\textsc{\Large AERE 361}\\[0.5 cm]				% Course Code
 	\textsc{\Large Project Proposal}\\[0.2 cm]
-	\textsc{\Large TEAM NAME HERE}\\[0.2 cm]
+	\textsc{\Large Venus 5}\\[0.2 cm]
 	\rule{\linewidth}{0.2 mm} \\[0.4 cm]
 	%{ \huge \bfseries \thetitle}\\
 	
@@ -128,12 +128,11 @@
 		
 			\begin{flushleft} 
 			\emph{Team Member Names :} \\
-			Last Name, First Name\linebreak
-			Last Name, First Name\linebreak
-			Last Name, First Name\linebreak
-			Last Name, First Name\linebreak
-			Last Name, First Name\linebreak
-			Last Name, First Name\linebreak
+			Weber, Mike\linebreak
+			Hurd, Franz\linebreak
+			Dev, Kushal\linebreak
+			Galuk, Sam\linebreak
+			Hans, Rachel\linebreak
 			
 		\end{flushleft}
 	\end{minipage}\\[2 cm]
@@ -237,9 +236,9 @@ void loop() {
 Finally, wrap up your proposal. This only needs to be one or two paragraphs, but it should conclude with what you plan to do and the why and how. Yes, this may seem repetitive, but that is intentional. Do not forget to update your references as those will appear below in a seperate page.
 
 \newpage
-%\section{References}
+\section{References}
 \printbibliography[heading=subbibintoc]
-%\bibliographystyle{plain}
-%\bibliography{ref}
+\bibliographystyle{plain}
+\bibliography{ref}
 
 \end{document}
